Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
 <ul>
 <li>
-<strong>Syllabus 2015</strong> - timetable and room information for the course (<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">link</a>) </li>
+<strong>Syllabus 2015</strong> (<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">link</a>)  - timetable and room information for the course </li>
 <li>
-<strong>Campus management</strong> - the course description in the course catalog of the university (<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">link</a>) </li>
+<strong>Campus management</strong> (<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">link</a>)  - the course description in the course catalog of the university </li>
 <li>
-<strong>Ilias</strong> - course material will be posted here (<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">link</a>)</li>
+<strong>Ilias</strong> (<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">link</a>) - course material will be posted here </li>
 <li>
 <strong>Questions / contact</strong> - <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a>
 </li>
