Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
 <ul>
 <li>
-<strong>Literature Research</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Literature/Practical/Practical_LiteratureResearch.pdf">practical</a>
+<strong>Literature Research</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch">lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LiteratureResearch/Practical/Practical_LiteratureResearch.pdf">practical</a>
 </li>
 <li>
-<strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">lab material</a>
+<strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/ProjectOrganization/ExampleProject.zip">project template</a>
 </li>
 <li>
 <strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a></strong> </li>
