Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li>
 <strong>Campus management</strong> (<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">link</a>)  - the course description in the course catalog of the university </li>
 <li>
-<strong>Ilias</strong> (<a href="https://ilias.uni-freiburg.de/goto.php?target=exc_262099&amp;client_id=unifreiburg">link</a>) - course material will be posted here </li>
+<strong>Ilias</strong> (<a href="https://ilias.uni-freiburg.de/goto.php?target=crs_441816&amp;client_id=unifreiburg">link</a>) - course material will be posted here - password will be provided during the lectures!</li>
 <li>
 <strong>Questions / contact</strong> - <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a>
 </li>
