Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
 
 <ul>
 <li>
-<strong>Slides</strong> of the lectures, as well as further readings and exercises will be posted on Ilias</li>
+<strong>Lecture</strong> notes available <a href="https://github.com/florianhartig/ResearchSkills/raw/master/LectureNotes/ResearchSkills.pdf">here</a>
+</li>
 <li>
-<strong>Lecture</strong> notes will be available here soon</li>
+<strong>Slides</strong> of the lectures, as well as further readings and exercises will be posted on Ilias</li>
 </ul>
 
 <h4>
 <a id="labs--practicals" class="anchor" href="#labs--practicals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Labs / Practicals</h4>
+
+<p>All labs available <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs">here</a></p>
 
 <ul>
 <li>
