Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <ul>
 <li>
-<strong>Lecture</strong> notes available <a href="https://github.com/florianhartig/ResearchSkills/raw/master/LectureNotes/ResearchSkills.pdf">here</a>
+<strong>Lecture</strong> notes - <a href="https://github.com/florianhartig/ResearchSkills/raw/master/LectureNotes/ResearchSkills.pdf">here</a>
 </li>
 <li>
 <strong>Slides</strong> of the lectures, as well as further readings and exercises will be posted on Ilias</li>
