Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/ProjectOrganization/ExampleProject.zip">project template</a>
 </li>
 <li>
-<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">script</a></strong> </li>
+<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">lecture notes</a></strong> </li>
 <li>
-<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">script</a></strong>
+<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">lecture notes</a></strong>
 </li>
 <li>
 <strong>Version Control</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">lab material</a>
