--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <ul>
 <li>
-<strong>Lecture</strong> notes - <a href="https://github.com/florianhartig/ResearchSkills/raw/master/LectureNotes/ResearchSkills.pdf">here</a>
+<strong>Lecture</strong> notes - <a href="https://www.dropbox.com/s/1otretqxn2o34e3/ResearchSkills.pdf?dl=0">here</a>
 </li>
 <li>
 <strong>Slides</strong> of the lectures, as well as further readings and exercises will be posted on Ilias</li>
@@ -71,9 +71,9 @@
 <strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/ProjectOrganization/ExampleProject.zip">project template</a>
 </li>
 <li>
-<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/LaTeX/Script/how_to_latex.pdf">lecture notes</a></strong> </li>
+<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab material</a> / <strong><a href="https://www.dropbox.com/s/9kjanprrj0vjhdf/how_to_latex.pdf?dl=0">lecture notes</a></strong> </li>
 <li>
-<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab material</a> / <strong><a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf">lecture notes</a></strong>
+<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab material</a> / <strong><a href="https://www.dropbox.com/s/8fmh10fdn6jd2xb/EssentialStatistics.pdf?dl=0">lecture notes</a></strong>
 </li>
 <li>
 <strong>Version Control</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">lab material</a>
@@ -87,10 +87,11 @@
 <a id="past-courses" class="anchor" href="#past-courses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Past courses</h3>
 
 <ul>
-<li>Winter term 12/13 (3-week full time, Uni Freiburg, MSc Env/For)</li>
-<li>Winter term 12/13 (1-week full time, Uni Freiburg, MSc Renewable Energy Management)</li>
-<li>Winter term 13/14 (3-week full time, Uni Freiburg, MSc Env/For)</li>
+<li>Winter term 15/16 (3-week full time, Uni Freiburg, MSc Env/For)</li>
 <li>Winter term 14/15 (3-week full time, Uni Freiburg, MSc Env/For)</li>
+<li>Winter term 13/14 (3-week full time, Uni Freiburg, MSc Env/For)</li>
+<li>Winter term 12/13 (1-week full time, Uni Freiburg, MSc Renewable Energy Management)</li>
+<li>Winter term 12/13 (3-week full time, Uni Freiburg, MSc Env/For)</li>
 </ul>
 
 <h3>
