--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
 
 <ul>
 <li>
-<strong>Lecture</strong> notes - <a href="https://www.dropbox.com/s/1otretqxn2o34e3/ResearchSkills.pdf?dl=0">here</a>
+<strong>Main lecture notes</strong> - <a href="https://www.dropbox.com/s/1otretqxn2o34e3/ResearchSkills.pdf?dl=0">here</a>
 </li>
+<li>
+<strong>Statistics</strong> lecture notes <a href="https://www.dropbox.com/s/8fmh10fdn6jd2xb/EssentialStatistics.pdf?dl=0">here</a>
+</li>
+<li>
+<strong>LaTex</strong> lecture notes <a href="https://www.dropbox.com/s/9kjanprrj0vjhdf/how_to_latex.pdf?dl=0">here</a> </li>
 <li>
 <strong>Slides</strong> of the lectures, as well as further readings and exercises will be posted on Ilias</li>
 </ul>
@@ -71,9 +76,9 @@
 <strong>Project Organization</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization">lab material</a> / <a href="https://github.com/florianhartig/ResearchSkills/raw/master/Labs/ProjectOrganization/ExampleProject.zip">project template</a>
 </li>
 <li>
-<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab material</a> / <strong><a href="https://www.dropbox.com/s/9kjanprrj0vjhdf/how_to_latex.pdf?dl=0">lecture notes</a></strong> </li>
+<strong>LaTeX</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LaTeX/">lab material</a> </li>
 <li>
-<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab material</a> / <strong><a href="https://www.dropbox.com/s/8fmh10fdn6jd2xb/EssentialStatistics.pdf?dl=0">lecture notes</a></strong>
+<strong>Statistics with R</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/Statistics">lab material</a>
 </li>
 <li>
 <strong>Version Control</strong> - <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl">lab material</a>
