Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Researchskills</h1>
-      <h2 class="project-tagline">Lecture notes for research skills course</h2>
+      <h2 class="project-tagline">A graduate course on craft of science</h2>
       <a href="https://github.com/florianhartig/ResearchSkills" class="btn">View on GitHub</a>
       <a href="https://github.com/florianhartig/ResearchSkills/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/florianhartig/ResearchSkills/tarball/master" class="btn">Download .tar.gz</a>
@@ -20,35 +20,22 @@
 
     <section class="main-content">
       <h3>
-<a id="general-infos" class="anchor" href="#general-infos" aria-hidden="true"><span class="octicon octicon-link"></span></a>General infos</h3>
+<a id="general-infos" class="anchor" href="#general-infos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>General infos</h3>
 
 <p>This site contains material and links for the MSc module Research Skills. The objective of this course is to to learn discipline-independent skills for doing quantitative research at the graduate-level. </p>
 
+<p>Taught at the University of Regensburg and the University of Freiburg.</p>
+
 <h3>
-<a id="course-content" class="anchor" href="#course-content" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course content</h3>
+<a id="course-content" class="anchor" href="#course-content" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course content</h3>
 
 <p><em>Introduction to philosophy and history of science, scientific method, finding your question, design of experiments, ensuring reproducibility, data analysis in R, visualization, introduction to LaTeX, scientific writing, logic and clarity, scientific presentations, good scientific practice</em></p>
 
 <h3>
-<a id="important-links-for-participants" class="anchor" href="#important-links-for-participants" aria-hidden="true"><span class="octicon octicon-link"></span></a>Important links for participants</h3>
-
-<ul>
-<li>
-<strong>Syllabus 2015</strong> (<a href="https://github.com/florianhartig/ResearchSkills/blob/master/Syllabus/Syllabus2015.pdf?raw=true">link</a>)  - timetable and room information for the course </li>
-<li>
-<strong>Campus management</strong> (<a href="https://www.verwaltung.uni-freiburg.de/lsfserver/rds?state=verpublish&amp;status=init&amp;vmfile=no&amp;publishid=138902&amp;moduleCall=webInfo&amp;publishConfFile=webInfo&amp;publishSubDir=veranstaltung">link</a>)  - the course description in the course catalog of the university </li>
-<li>
-<strong>Ilias</strong> (<a href="https://ilias.uni-freiburg.de/goto.php?target=crs_441816&amp;client_id=unifreiburg">link</a>) - course material will be posted here - password will be provided during the lectures!</li>
-<li>
-<strong>Questions / contact</strong> - <a href="http://www.biom.uni-freiburg.de/mitarbeiter/hartig">Florian Hartig</a>
-</li>
-</ul>
-
-<h3>
-<a id="course-materials-and-further-readings" class="anchor" href="#course-materials-and-further-readings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course materials and further readings</h3>
+<a id="course-materials-and-further-readings" class="anchor" href="#course-materials-and-further-readings" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course materials and further readings</h3>
 
 <h4>
-<a id="lecture-notes" class="anchor" href="#lecture-notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lecture notes</h4>
+<a id="lecture-notes" class="anchor" href="#lecture-notes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lecture notes</h4>
 
 <ul>
 <li>
@@ -57,14 +44,12 @@
 <li>
 <strong>Statistics</strong> lecture notes <a href="https://www.dropbox.com/s/8fmh10fdn6jd2xb/EssentialStatistics.pdf?dl=0">here</a>
 </li>
-<li>
-<strong>LaTex</strong> lecture notes <a href="https://www.dropbox.com/s/9kjanprrj0vjhdf/how_to_latex.pdf?dl=0">here</a> </li>
-<li>
-<strong>Slides</strong> of the lectures, as well as further readings and exercises will be posted on Ilias</li>
+<li><p><strong>LaTex</strong> lecture notes <a href="https://www.dropbox.com/s/9kjanprrj0vjhdf/how_to_latex.pdf?dl=0">here</a> </p></li>
+<li><p><strong>Slides</strong> of the lectures, as well as further readings and exercises will be posted on the respective course information sites</p></li>
 </ul>
 
 <h4>
-<a id="labs--practicals" class="anchor" href="#labs--practicals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Labs / Practicals</h4>
+<a id="labs--practicals" class="anchor" href="#labs--practicals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Labs / Practicals</h4>
 
 <p>All labs available <a href="https://github.com/florianhartig/ResearchSkills/tree/master/Labs">here</a></p>
 
@@ -89,7 +74,7 @@
 </ul>
 
 <h3>
-<a id="past-courses" class="anchor" href="#past-courses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Past courses</h3>
+<a id="past-courses" class="anchor" href="#past-courses" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Past courses</h3>
 
 <ul>
 <li>Winter term 15/16 (3-week full time, Uni Freiburg, MSc Env/For)</li>
@@ -100,7 +85,7 @@
 </ul>
 
 <h3>
-<a id="authors-and-copyright" class="anchor" href="#authors-and-copyright" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and copyright</h3>
+<a id="authors-and-copyright" class="anchor" href="#authors-and-copyright" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and copyright</h3>
 
 <p>Unless specified otherwise, the author of these materials is Florian Hartig. Reuse permitted under Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</p>
 
