Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Researchskills</h1>
-      <h2 class="project-tagline">A graduate course on craft of science</h2>
+      <h2 class="project-tagline">A graduate course on the crafts of science</h2>
       <a href="https://github.com/florianhartig/ResearchSkills" class="btn">View on GitHub</a>
       <a href="https://github.com/florianhartig/ResearchSkills/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/florianhartig/ResearchSkills/tarball/master" class="btn">Download .tar.gz</a>
@@ -25,6 +25,8 @@
 <p>This site contains material and links for the MSc module Research Skills. The objective of this course is to to learn discipline-independent skills for doing quantitative research at the graduate-level. </p>
 
 <p>Taught at the University of Regensburg and the University of Freiburg.</p>
+
+<p><strong>Author:</strong> <a href="http://www.uni-regensburg.de/biologie-vorklinische-medizin/theoretische-oekologie/mitarbeiter/hartig/index.html">Florian Hartig, University of Regensburg</a></p>
 
 <h3>
 <a id="course-content" class="anchor" href="#course-content" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course content</h3>
